--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "serve": "vite preview --port 3000"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
     "@vitejs/plugin-legacy": "^5.0.0",
-    "terser": "^5.24.0"
+    "html-minifier-terser": "^7.2.0",
+    "terser": "^5.24.0",
+    "vite": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
